@@ -1,38 +1,79 @@
-import java.util.Map;
+import com.google.common.annotations.VisibleForTesting;
+import com.google.common.collect.ImmutableMap;
 
-public class cld extends bvf<ckx> {
+public class cld extends bvh<ckz> {
+   private static final int c = 4;
+   private static final int d = 256;
+   private static final int e = 5;
+   private static final int f = 4;
+   private static final float g = 0.7F;
+   private static final int h = Math.round(15.0F);
+   private static final int i = Math.round(4.0F);
+   private static final int j = Math.round(10.0F);
+
+   @VisibleForTesting
    public cld() {
-      super(Map.of(ccq.o, ccr.a, ccq.m, ccr.b, ccq.aU, ccr.b, ccq.aV, ccr.b));
+      super(ImmutableMap.of(ccs.o, cct.a, ccs.aY, cct.b, ccs.aW, cct.b, ccs.aX, cct.b, ccs.aV, cct.a, ccs.m, cct.b, ccs.ba, cct.b), h + 1 + i);
    }
 
-   protected boolean a(aqt $$0, ckx $$1) {
-      return $$1.aF() && !$$1.bf() && $$1.at() == bty.a;
+   protected boolean a(aqu $$0, ckz $$1) {
+      return $$1.at() != bua.a ? false : $$1.dU().c(ccs.o).map($$1x -> b($$1, $$1x)).map($$1x -> {
+         if (!$$1x) {
+            $$1.dU().b(ccs.aV);
+         }
+
+         return $$1x;
+      }).orElse(false);
    }
 
-   protected void a(aqt $$0, ckx $$1, long $$2) {
-      btl $$3 = $$1.dU().c(ccq.o).orElse(null);
-      if ($$3 != null) {
-         boolean $$4 = $$1.b($$3.do());
-         eww $$5 = null;
-         if ($$4) {
-            eww $$6 = ceh.a($$1, 5, 5, $$3.do());
-            if ($$6 != null && ckz.a($$1, $$6) && $$3.i($$6.c, $$6.d, $$6.e) > $$3.g($$1)) {
-               $$5 = $$6;
+   protected boolean a(aqu $$0, ckz $$1, long $$2) {
+      return $$1.dU().a(ccs.o) && $$1.dU().a(ccs.aV);
+   }
+
+   protected void b(aqu $$0, ckz $$1, long $$2) {
+      $$1.dU().c(ccs.o).ifPresent($$1x -> $$1.b(bua.q));
+      $$1.dU().a(ccs.aW, azs.a, (long)h);
+      $$1.a(avp.cG, 1.0F, 1.0F);
+   }
+
+   protected void c(aqu $$0, ckz $$1, long $$2) {
+      if ($$1.at() == bua.q) {
+         $$1.b(bua.a);
+      }
+
+      $$1.dU().a(ccs.aY, azs.a, (long)j);
+      $$1.dU().b(ccs.aV);
+   }
+
+   protected void d(aqu $$0, ckz $$1, long $$2) {
+      buq<ckz> $$3 = $$1.dU();
+      btn $$4 = $$3.c(ccs.o).orElse(null);
+      if ($$4 != null) {
+         $$1.a(ff.a.b, $$4.dn());
+         if (!$$3.c(ccs.aW).isPresent() && !$$3.c(ccs.aX).isPresent()) {
+            $$3.a(ccs.aX, azs.a, (long)i);
+            if (a($$1, $$4)) {
+               double $$5 = $$4.du() - $$1.du();
+               double $$6 = $$4.e($$4.bS() ? 0.8 : 0.3) - $$1.e(0.5);
+               double $$7 = $$4.dA() - $$1.dA();
+               cog $$8 = new cog($$1, $$0);
+               $$1.a(avp.cJ, 1.5F, 1.0F);
+               $$8.c($$5, $$6, $$7, 0.7F, (float)(5 - $$0.al().a() * 4));
+               $$0.b($$8);
             }
          }
-
-         if ($$5 == null) {
-            $$5 = $$1.dT().h() ? ckz.a($$3, $$1.dT()) : a($$1, $$3);
-         }
-
-         $$1.dU().a(ccq.m, new cct(jd.a((jw)$$5), 0.6F, 1));
       }
    }
 
-   private static eww a(ckx $$0, btl $$1) {
-      eww $$2 = $$1.do().d($$0.do());
-      double $$3 = $$2.f() - ayn.d($$0.dT().j(), 8.0, 4.0);
-      eww $$4 = $$2.d().d($$3, $$3, $$3);
-      return $$0.do().e($$4);
+   @VisibleForTesting
+   public static boolean a(ckz $$0, btn $$1) {
+      exa $$2 = $$0.g(1.0F);
+      exa $$3 = $$1.dn().d($$0.dn()).d();
+      return $$2.b($$3) > 0.5;
+   }
+
+   private static boolean b(ckz $$0, btn $$1) {
+      double $$2 = $$0.dn().g($$1.dn());
+      return $$2 > 4.0 && $$2 < 256.0;
    }
 }
