@@ -1,17 +1,172 @@
-import com.google.common.collect.ImmutableList;
+import java.util.List;
 
 public class rp {
-   public static final akp<ebn<?, ?>> a = rq.a("end_spike");
-   public static final akp<ebn<?, ?>> b = rq.a("end_gateway_return");
-   public static final akp<ebn<?, ?>> c = rq.a("end_gateway_delayed");
-   public static final akp<ebn<?, ?>> d = rq.a("chorus_plant");
-   public static final akp<ebn<?, ?>> e = rq.a("end_island");
+   public static final akq<ebq<?, ?>> a = rr.a("monster_room");
+   public static final akq<ebq<?, ?>> b = rr.a("fossil_coal");
+   public static final akq<ebq<?, ?>> c = rr.a("fossil_diamonds");
+   public static final akq<ebq<?, ?>> d = rr.a("dripstone_cluster");
+   public static final akq<ebq<?, ?>> e = rr.a("large_dripstone");
+   public static final akq<ebq<?, ?>> f = rr.a("pointed_dripstone");
+   public static final akq<ebq<?, ?>> g = rr.a("underwater_magma");
+   public static final akq<ebq<?, ?>> h = rr.a("glow_lichen");
+   public static final akq<ebq<?, ?>> i = rr.a("rooted_azalea_tree");
+   public static final akq<ebq<?, ?>> j = rr.a("cave_vine");
+   public static final akq<ebq<?, ?>> k = rr.a("cave_vine_in_moss");
+   public static final akq<ebq<?, ?>> l = rr.a("moss_vegetation");
+   public static final akq<ebq<?, ?>> m = rr.a("moss_patch");
+   public static final akq<ebq<?, ?>> n = rr.a("moss_patch_bonemeal");
+   public static final akq<ebq<?, ?>> o = rr.a("dripleaf");
+   public static final akq<ebq<?, ?>> p = rr.a("clay_with_dripleaves");
+   public static final akq<ebq<?, ?>> q = rr.a("clay_pool_with_dripleaves");
+   public static final akq<ebq<?, ?>> r = rr.a("lush_caves_clay");
+   public static final akq<ebq<?, ?>> s = rr.a("moss_patch_ceiling");
+   public static final akq<ebq<?, ?>> t = rr.a("spore_blossom");
+   public static final akq<ebq<?, ?>> u = rr.a("amethyst_geode");
+   public static final akq<ebq<?, ?>> v = rr.a("sculk_patch_deep_dark");
+   public static final akq<ebq<?, ?>> w = rr.a("sculk_patch_ancient_city");
+   public static final akq<ebq<?, ?>> x = rr.a("sculk_vein");
 
-   public static void a(qp<ebn<?, ?>> $$0) {
-      rq.a($$0, a, eca.J, new eey(false, ImmutableList.of(), null));
-      rq.a($$0, b, eca.L, eed.a(aqt.a, true));
-      rq.a($$0, c, eca.L, eed.a());
-      rq.a($$0, d, eca.l);
-      rq.a($$0, e, eca.K);
+   private static jm<eit> a(ji $$0) {
+      return sg.a(
+         ecd.w,
+         new edy(
+            List.of(
+               edy.a(new bqd(bpb.<bpw>a().a(bqc.a(0, 4), 2).a(bpt.a(0), 1).a()), egi.a(dga.sE.o().a(dts.R, $$0))),
+               edy.a(bpt.a(1), egi.a(dga.sD.o().a(dts.R, $$0)))
+            ),
+            ji.b,
+            eaf.d,
+            true
+         )
+      );
+   }
+
+   private static jm<eit> a() {
+      return sg.a(
+         ecd.S,
+         new eez(
+            new egs(
+               bpb.<dtc>a().a(dga.sF.o().a(dne.d, ji.f), 1).a(dga.sF.o().a(dne.d, ji.e), 1).a(dga.sF.o().a(dne.d, ji.c), 1).a(dga.sF.o().a(dne.d, ji.d), 1)
+            )
+         )
+      );
+   }
+
+   public static void a(qq<ebq<?, ?>> $$0) {
+      jn<ebq<?, ?>> $$1 = $$0.a(lu.aI);
+      jn<enp> $$2 = $$0.a(lu.aS);
+      rr.a($$0, a, ecd.C);
+      List<akr> $$3 = List.of(
+         akr.b("fossil/spine_1"),
+         akr.b("fossil/spine_2"),
+         akr.b("fossil/spine_3"),
+         akr.b("fossil/spine_4"),
+         akr.b("fossil/skull_1"),
+         akr.b("fossil/skull_2"),
+         akr.b("fossil/skull_3"),
+         akr.b("fossil/skull_4")
+      );
+      List<akr> $$4 = List.of(
+         akr.b("fossil/spine_1_coal"),
+         akr.b("fossil/spine_2_coal"),
+         akr.b("fossil/spine_3_coal"),
+         akr.b("fossil/spine_4_coal"),
+         akr.b("fossil/skull_1_coal"),
+         akr.b("fossil/skull_2_coal"),
+         akr.b("fossil/skull_3_coal"),
+         akr.b("fossil/skull_4_coal")
+      );
+      jm<enp> $$5 = $$2.b(qy.D);
+      rr.a($$0, b, ecd.p, new eci($$3, $$4, $$5, $$2.b(qy.E), 4));
+      rr.a($$0, c, ecd.p, new eci($$3, $$4, $$5, $$2.b(qy.F), 4));
+      rr.a($$0, d, ecd.aj, new eef(12, bqc.a(3, 6), bqc.a(2, 8), 1, 3, bqc.a(2, 4), bqb.b(0.3F, 0.7F), bpq.a(0.1F, 0.3F, 0.1F, 0.9F), 0.1F, 3, 8));
+      rr.a($$0, e, ecd.ak, new eek(30, bqc.a(3, 19), bqb.b(0.4F, 2.0F), 0.33F, bqb.b(0.3F, 0.9F), bqb.b(0.4F, 1.0F), bqb.b(0.0F, 0.3F), 4, 0.6F));
+      rr.a(
+         $$0,
+         f,
+         ecd.ag,
+         new efa(
+            jq.a(
+               sg.a(ecd.al, new eeq(0.2F, 0.7F, 0.5F, 0.5F), ein.a(ji.a, eaf.c(), eaf.d, 12), eiy.a(bpt.a(1))),
+               sg.a(ecd.al, new eeq(0.2F, 0.7F, 0.5F, 0.5F), ein.a(ji.b, eaf.c(), eaf.d, 12), eiy.a(bpt.a(-1)))
+            )
+         )
+      );
+      rr.a($$0, g, ecd.B, new eff(5, 1, 0.5F));
+      dky $$6 = (dky)dga.fg;
+      rr.a($$0, h, ecd.A, new eem($$6, 20, false, true, true, 0.5F, jq.a(dfy::s, dga.b, dga.g, dga.e, dga.c, dga.su, dga.qN, dga.qz, dga.sJ)));
+      rr.a(
+         $$0,
+         i,
+         ecd.z,
+         new eex(
+            sg.a($$1.b(rw.w)),
+            3,
+            3,
+            awe.bw,
+            egi.a(dga.sH),
+            20,
+            100,
+            3,
+            2,
+            egi.a(dga.sG),
+            20,
+            2,
+            eaf.a(eaf.b(eaf.c(List.of(dga.a, dga.nc, dga.nb)), eaf.a(awe.cn)), eaf.a(ji.a.q(), awe.ch))
+         )
+      );
+      egs $$7 = new egs(bpb.<dtc>a().a(dga.sw.o(), 4).a(dga.sw.o().a(dgu.s_, Boolean.valueOf(true)), 1));
+      ego $$8 = new ego(new egs(bpb.<dtc>a().a(dga.sv.o(), 4).a(dga.sv.o().a(dgu.s_, Boolean.valueOf(true)), 1)), dgv.e, bqc.a(23, 25));
+      rr.a(
+         $$0,
+         j,
+         ecd.w,
+         new edy(
+            List.of(edy.a(new bqd(bpb.<bpw>a().a(bqc.a(0, 19), 2).a(bqc.a(0, 2), 3).a(bqc.a(0, 6), 10).a()), $$7), edy.a(bpt.a(1), $$8)), ji.a, eaf.c, true
+         )
+      );
+      rr.a($$0, k, ecd.w, new edy(List.of(edy.a(new bqd(bpb.<bpw>a().a(bqc.a(0, 3), 5).a(bqc.a(1, 7), 1).a()), $$7), edy.a(bpt.a(1), $$8)), ji.a, eaf.c, true));
+      rr.a($$0, l, ecd.S, new eez(new egs(bpb.<dtc>a().a(dga.sz.o(), 4).a(dga.sy.o(), 7).a(dga.sA.o(), 25).a(dga.bt.o(), 50).a(dga.iH.o(), 10))));
+      rr.a($$0, m, ecd.x, new efg(awe.bu, egi.a(dga.sC), sg.a($$1.b(l)), eik.b, bpt.a(1), 0.0F, 5, 0.8F, bqc.a(4, 7), 0.3F));
+      rr.a($$0, n, ecd.x, new efg(awe.bu, egi.a(dga.sC), sg.a($$1.b(l)), eik.b, bpt.a(1), 0.0F, 5, 0.6F, bqc.a(1, 2), 0.75F));
+      rr.a($$0, o, ecd.ag, new efa(jq.a(a(), a(ji.f), a(ji.e), a(ji.d), a(ji.c))));
+      rr.a($$0, p, ecd.x, new efg(awe.bv, egi.a(dga.dR), sg.a($$1.b(o)), eik.b, bpt.a(3), 0.8F, 2, 0.05F, bqc.a(4, 7), 0.7F));
+      rr.a($$0, q, ecd.y, new efg(awe.bv, egi.a(dga.dR), sg.a($$1.b(o)), eik.b, bpt.a(3), 0.8F, 5, 0.1F, bqc.a(4, 7), 0.7F));
+      rr.a($$0, r, ecd.ah, new ees(sg.a($$1.b(p)), sg.a($$1.b(q))));
+      rr.a($$0, s, ecd.x, new efg(awe.bu, egi.a(dga.sC), sg.a($$1.b(k)), eik.a, bqc.a(1, 2), 0.0F, 5, 0.08F, bqc.a(4, 7), 0.3F));
+      rr.a($$0, t, ecd.S, new eez(egi.a(dga.sx)));
+      rr.a(
+         $$0,
+         u,
+         ecd.ai,
+         new eei(
+            new dyv(
+               egi.a(dga.a),
+               egi.a(dga.qt),
+               egi.a(dga.qu),
+               egi.a(dga.qN),
+               egi.a(dga.te),
+               List.of(dga.qy.o(), dga.qx.o(), dga.qw.o(), dga.qv.o()),
+               awe.bO,
+               awe.bQ
+            ),
+            new dyx(1.7, 2.2, 3.2, 4.2),
+            new dyw(0.95, 2.0, 2),
+            0.35,
+            0.083,
+            true,
+            bqc.a(4, 6),
+            bqc.a(3, 4),
+            bqc.a(1, 2),
+            -16,
+            16,
+            0.05,
+            1
+         )
+      );
+      rr.a($$0, v, ecd.am, new eey(10, 32, 64, 0, 1, bpt.a(0), 0.5F));
+      rr.a($$0, w, ecd.am, new eey(10, 32, 64, 0, 1, bqc.a(1, 3), 0.5F));
+      dky $$9 = (dky)dga.qT;
+      rr.a($$0, x, ecd.A, new eem($$9, 20, true, true, true, 1.0F, jq.a(dfy::s, dga.b, dga.g, dga.e, dga.c, dga.su, dga.qN, dga.qz, dga.sJ)));
    }
 }
